--- a/index.html
+++ b/index.html
@@ -1033,14 +1033,15 @@
         </div>
     </div>
     <!-- end prediksi -->
-    <script src="http://128.199.250.234/assets/frontend/js/jquery-3.6.0.min.js"></script>
-    <script src="http://128.199.250.234/assets/frontend/js/bootstrap.min.js"></script>
-    <script src="//cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
-    <script src="http://128.199.250.234/assets/frontend/js/myscripts.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.dataTables.min.js"></script>
+    <script src="js/myscripts.js"></script>
     <script>
         $(document).ready(function() {
             $('.table-result-dark').DataTable();
         });
     </script>
+
 
 </body></html>
