--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="kontent">
                     <h1 class="text-center">Hasil Pengeluaran Togel Oregon 03 Hari Ini</h1><br>
                     
-                    <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer"><div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer"><table class="table table-result-dark dataTable no-footer" style="width: 100%;" id="DataTables_Table_0" role="grid" aria-describedby="DataTables_Table_0_info">
+                    <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer"><div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer"><div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer"><table class="table table-result-dark dataTable no-footer" style="width: 100%;" id="DataTables_Table_0" role="grid" aria-describedby="DataTables_Table_0_info">
                         <thead>
                             <tr role="row"><th width="5%" style="text-align: center; width: 7px;" class="sorting sorting_asc" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="#: activate to sort column descending" aria-sort="ascending">#</th><th width="30%" style="text-align: center; width: 109px;" class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="TANGGAL: activate to sort column ascending">TANGGAL</th><th width="20%" style="text-align: center; width: 61px;" class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="HARI: activate to sort column ascending">HARI</th><th width="45%" style="text-align: center; width: 177px;" class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="RESULT: activate to sort column ascending">RESULT</th></tr>
                         </thead>
@@ -1027,7 +1027,7 @@
                                         <td style="text-align: center;">
                                             <span class="badge rescir">3</span><span class="badge rescir">0</span><span class="badge rescir">0</span><span class="badge rescir">5</span>                                        </td>
                                     </tr></tbody>
-                    </table></div></div>
+                    </table></div></div></div>
                 </div>
             </div>
         </div>
@@ -1058,6 +1058,7 @@
             $('.table-result-dark').DataTable();
         });
     </script>
+
 
 
 
