--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <link rel="stylesheet" href="js/vendor/nivo-lightbox/css/nivo-lightbox.css">
     <link rel="stylesheet" href="js/vendor/nivo-lightbox/css/themes/default/default.css" type="text/css">
     <!-- CUSTOM STYLE -->
-              <link rel="stylesheet" href="assets/css/bgt/bgt2.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/game_compressed_ic.css">
-    <link rel="stylesheet" href="assets/css/defaultTheme.css">
-              <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+              <link rel="stylesheet" href="css/bgt/bgt2.css">
+        <link rel="stylesheet" type="text/css" href="css/game_compressed_ic.css">
+    <link rel="stylesheet" href="css/defaultTheme.css">
+              <link rel="stylesheet" type="text/css" href="css/style.css">
         <script language="JavaScript">
         function OpenInNewTab(url) {
             var win = window.open('register.php', '_blank');
