--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/css/vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/vendor/animate/animate.css">
     <link rel="stylesheet" href="assets/css/vendor/bootstrap-checkbox.css">
     <link rel="stylesheet" href="assets/css/vendor/ribbons/3d-corner-ribbons.css">
@@ -29,10 +29,10 @@
     <link rel="stylesheet" href="assets/js/vendor/nivo-lightbox/css/nivo-lightbox.css">
     <link rel="stylesheet" href="assets/js/vendor/nivo-lightbox/css/themes/default/default.css" type="text/css">
     <!-- CUSTOM STYLE -->
-              <link rel="stylesheet" href="assets/css/bgt/bgt2.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/game_compressed_ic.css">
-    <link rel="stylesheet" href="assets/css/defaultTheme.css">
-              <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+              <link rel="stylesheet" href="css/bgt/bgt2.css">
+        <link rel="stylesheet" type="text/css" href="css/game_compressed_ic.css">
+    <link rel="stylesheet" href="css/defaultTheme.css">
+              <link rel="stylesheet" type="text/css" href="css/style.css">
         <script language="JavaScript">
         function OpenInNewTab(url) {
             var win = window.open('register.php', '_blank');
